force-app/main/default/objects/custom_create352__c/custom_create352__c.object-meta.xml
<CustomObject>
    <label>Custom created object352</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects352</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>