force-app/main/default/objects/custom_create352__c/fields/custom_create_352field606__c.field-meta.xml
<CustomField>
    <fullName>custom_create_352field606__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 352field606</label>
    <type>Checkbox</type>
</CustomField>